deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backapp-deploy
  labels:
    training: block3
    homework: backapp
spec:
  replicas: 1
  selector:
    matchLabels:
      training: block3
      homework: backapp
  template:
    metadata:
      labels:
        training: block3
        homework: backapp
    spec:
      containers:
      - name: backapp
        image: quay.io/drsylent/cubix/block3/homework-backapp:springboot3
        ports:
        - containerPort: 8080
