service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backapp-svc
  labels:
    training: block3
    homework: backapp
spec:
  type: ClusterIP
  selector:
    training: block3
    homework: backapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
