service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontapp-svc
  labels:
    training: block3
    homework: frontapp
spec:
  type: ClusterIP
  selector:
    training: block3
    homework: frontapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
